--- a/Quest01/skeleton/index.html
+++ b/Quest01/skeleton/index.html
@@ -3,18 +3,119 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- TODO: 또 무엇이 필요할까요? -->
+		<meta name="description" content="Naver">
+		<title>NAVER</title>
 	</head>
 	<body>
 		<header>
 			<!-- TODO: 어디까지를 header로 보는 것이 좋을까요? -->
+			<div>
+				<a href="">🍔</a>
+			</div>
+			<div>
+				<u><a href="">QR 체크인</a></u>
+				<a href="">N Pay</a>
+				<a href="">🗄️</a>
+			</div>
 		</header>
 
 		<section class="main">
 			<!-- TODO: main은 어떤 식으로 나눌 수 있을까요? -->
+			<div>
+				<strong>NAVER</strong>
+			</div>
+			<div>
+				<input type="text">
+			</div>
+			<div>
+				<ul>
+					<li><a href="">뉴스판</a></li>
+					<li><a href="">경제지표판</a></li>
+					<li><a href="">연예판</a></li>
+					<li><a href="">트렌드판</a></li>
+					<li><a href="">카페</a></li>
+					<li><a href="">블로그</a></li>
+					<li><a href="">메일</a></li>
+					<li><a href="">...</a></li>
+				</ul>
+			</div>
+			<div>
+				<div class="card">
+					<div>
+						🌛 10 맑음
+						<div>어제보다 높아요</div>
+					</div>
+					<div>
+						Now
+						<div>지금 방송중</div>
+					</div>
+				</div>
+				<div class="card">
+					<div>
+						<strong>날씨</strong><span>서울시 잠실동</span><button></button>
+					</div>
+					<div>
+						<a href="">시간대별 날씨</a>
+						<a href="">시간대별 미세먼지</a>
+						<a href="">주간 날씨</a>
+						<a href="">주간 미세먼지</a>
+					</div>
+					<div>
+					</div>
+				</div>
+				<div class="card">
+					<div>
+						<strong>코로나19</strong>
+						<div>국내외 확진 현황</div>
+					</div>
+					<div>
+						<strong>코로나19 팩트체크</strong>
+						백신 정보 팩트는?
+					</div>
+				</div>
+				<div class="card">
+					🇰🇷 제102주년 <strong>대한민국 임시정부 수립일</strong>
+				</div>
+				<div class="card">
+					앱으로 <strong>새로운 네이버</strong>를 더 쾌적하게 사용해 보세요.
+					<a href="">앱 사용하기</a>
+				</div>
+				<div class="card">
+					<strong>웹툰</strong>
+				</div>
+				<div class="card">
+					<div>
+						<strong>인기 주제 판을 확인해 보세요!</strong>
+						<a href="">판관리</a>
+					</div>
+					<div>
+						<div>
+							<a href="">영화판</a>
+							<a href="">뿜판</a>
+						</div>
+						<div>
+							<a href="">웹툰판</a>
+							<a href="">경제M판</a>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<span>알립니다 </span> 네이버앱 업데이트 사전 안내
+				</div>
+			</div>
 		</section>
 
 		<footer>
 			<!-- TODO: 하단의 여러 가지 링크들은 어떻게 처리하면 좋을까요? -->
+			<div>
+				<a href="">로그인</a> | <a href="">전체서비스</a> | <a href="">PC버전</a>
+			</div>
+			<div>
+				<a href="">이용약관</a> | <a href=""><strong>개인정보처리방침</strong></a> | <a href="">고객센터</a>
+			</div>
+			<div>
+				<a href="#">NAVER</a>
+			</div>
 		</footer>
 	</body>
 </html>
